@@ -150,8 +150,7 @@ public class AuthorizationSuccessResponse
 
 
 	@Override
-	public Map<String,String> toParameters()
-		throws SerializeException {
+	public Map<String,String> toParameters() {
 
 		Map<String,String> params = new HashMap<>();
 
