@@ -263,8 +263,7 @@ public class TokenRequest extends AbstractRequest {
 
 
 	@Override
-	public HTTPRequest toHTTPRequest()
-		throws SerializeException {
+	public HTTPRequest toHTTPRequest() {
 
 		if (getEndpointURI() == null)
 			throw new SerializeException("The endpoint URI is not specified");
