@@ -112,8 +112,7 @@ public final class TokenRevocationRequest extends AbstractRequest {
 
 
 	@Override
-	public HTTPRequest toHTTPRequest()
-		throws SerializeException {
+	public HTTPRequest toHTTPRequest() {
 
 		if (getEndpointURI() == null)
 			throw new SerializeException("The endpoint URI is not specified");
