@@ -57,8 +57,7 @@ public class ClientDeleteRequest extends ProtectedResourceRequest {
 
 
 	@Override
-	public HTTPRequest toHTTPRequest() 
-		throws SerializeException {
+	public HTTPRequest toHTTPRequest() {
 		
 		if (getEndpointURI() == null)
 			throw new SerializeException("The endpoint URI is not specified");
