@@ -59,8 +59,7 @@ public class ClientReadRequest extends ProtectedResourceRequest {
 
 
 	@Override
-	public HTTPRequest toHTTPRequest() 
-		throws SerializeException {
+	public HTTPRequest toHTTPRequest() {
 		
 		if (getEndpointURI() == null)
 			throw new SerializeException("The endpoint URI is not specified");
