@@ -151,8 +151,7 @@ public class ClientUpdateRequest extends ProtectedResourceRequest {
 	
 	
 	@Override
-	public HTTPRequest toHTTPRequest()
-		throws SerializeException{
+	public HTTPRequest toHTTPRequest() {
 		
 		if (getEndpointURI() == null)
 			throw new SerializeException("The endpoint URI is not specified");
