@@ -168,8 +168,7 @@ public class AuthenticationSuccessResponse
 	
 	
 	@Override
-	public Map<String,String> toParameters()
-		throws SerializeException {
+	public Map<String,String> toParameters() {
 	
 		Map<String,String> params = super.toParameters();
 
