@@ -13,7 +13,6 @@ import com.nimbusds.jwt.JWTParser;
 
 import com.nimbusds.oauth2.sdk.AccessTokenResponse;
 import com.nimbusds.oauth2.sdk.ParseException;
-import com.nimbusds.oauth2.sdk.SerializeException;
 import com.nimbusds.oauth2.sdk.http.HTTPResponse;
 import com.nimbusds.oauth2.sdk.token.AccessToken;
 import com.nimbusds.oauth2.sdk.token.RefreshToken;
@@ -240,14 +239,9 @@ public class OIDCAccessTokenResponse
 	 * </pre>
 	 *
 	 * @return The JSON object.
-	 *
-	 * @throws SerializeException If this OpenID Connect access token
-	 *                            response couldn't be serialised to a JSON
-	 *                            object.
 	 */
 	@Override
-	public JSONObject toJSONObject()
-		throws SerializeException {
+	public JSONObject toJSONObject() {
 	
 		JSONObject o = super.toJSONObject();
 
